feat: 예약 가능 시간 조회 시 테마 존재 여부 검증 추가